--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,18 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    
+    background-image: url('../img/background.png');
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: 100% 100%;
 }
 
-#teste{
-    background-image: url('/img/background.png');
+.titulo {
+    position:fixed;
+    top:0;
+}
+
+.canvasPosition{
+    position: fixed;
+    bottom: 10px;;
 }
